fix: startup 스크립트 수정